samples/_failures_safe/1761002083_a9d140_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04670cde.c: In function ‘main’:
./samples/SAFE/__tmp_04670cde.c:129:9: error: ‘decomp’ undeclared (first use in this function)
  129 |     if (decomp
      |         ^~~~~~
./samples/SAFE/__tmp_04670cde.c:129:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_04670cde.c:129:15: error: expected ‘)’ at end of input
  129 |     if (decomp
      |        ~      ^
      |               )
./samples/SAFE/__tmp_04670cde.c:129:5: error: expected declaration or statement at end of input
  129 |     if (decomp
      |     ^~
